--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared'",
         "build:full": "yarn -s clear:build && yarn -s build",
         "build": "cd shared/locales && yarn -s build && cd ../utility && yarn -s build && cd ../structures && yarn -s build && cd ../..",
-        "clear:build": "rm -rf shared/*/dist shared/*/esm/dist backend/shared/*/dist",
+        "clear:shared": "rm -rf shared/*/dist shared/*/esm/dist backend/shared/*/dist",
         "clear": "rm -rf shared/*/dist shared/*/esm/dist frontend/app/*/dist backend/shared/*/dist backend/app/*/dist",
         "build:frontend": "yarn -s build && cd frontend/app/registration && yarn -s build:production && cd ../dashboard && yarn -s build:production && cd ../registration && yarn -s build:production",
         "build:structures": "cd shared/structures && yarn -s build && cd ../..",
@@ -34,7 +34,7 @@
         "mail": "maildev --ip 0.0.0.0 --incoming-user username --incoming-pass password",
         "clear-dependencies": "rm -rf node_modules */node_modules **/node_modules",
         "clear-vite-cache": "rm -rf frontend/app/*/node_modules/.vite",
-        "ship": "yarn -s build:shared:full && lerna publish --no-private"
+        "ship": "yarn -s clear:shared && yarn -s build:shared && lerna publish --no-private"
     },
     "dependencies": {
         "@babel/runtime": "^7.15.4",
