--- a/backend/shared/queues/package.json
+++ b/backend/shared/queues/package.json
@@ -11,8 +11,6 @@
     ],
     "scripts": {
         "build": "tsc -b",
-        "build:full": "rm -rf ./dist && yarn build",
-        "test": "jest --runInBand",
-        "test:reset": "yarn build:full && jest --runInBand"
+        "test": "jest --runInBand"
     }
 }
