--- a/package.json
+++ b/package.json
@@ -13,27 +13,33 @@
     "license": "AGPL-3.0-only",
     "scripts": {
         "dev": "yarn clear-vite-cache && concurrently -r 'yarn -s build:shared:watch' 'wait-on shared/structures/dist/index.js && lerna run dev --stream --parallel'",
-        "stripe-webhooks": "stripe listen --forward-to http://api.stamhoofd/stripe/webhooks",
-        "test": "lerna run test",
-        "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
         "dev:server": "concurrently -r 'yarn -s dev' 'yarn -s caddy' 'yarn -s dns' 'yarn -s mail' 'yarn -s stripe-webhooks'",
-        "dev:backend": "concurrently -r 'yarn -s build:shared:watch' 'lerna run dev:backend --stream --parallel' 'yarn caddy' 'yarn dns' 'yarn mail'",
-        "app:release": "cd devops && yarn -s build-code -s app && cd ../frontend/app/mobile && yarn ios && yarn android",
-        "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared'",
-        "build:full": "yarn -s clear:build && yarn -s build",
-        "build": "cd shared/locales && yarn -s build && cd ../utility && yarn -s build && cd ../structures && yarn -s build && cd ../..",
-        "clear:shared": "rm -rf shared/*/dist shared/*/esm/dist backend/shared/*/dist",
-        "clear": "rm -rf shared/*/dist shared/*/esm/dist frontend/app/*/dist backend/shared/*/dist backend/app/*/dist",
-        "build:frontend": "yarn -s build && cd frontend/app/registration && yarn -s build:production && cd ../dashboard && yarn -s build:production && cd ../registration && yarn -s build:production",
-        "build:structures": "cd shared/structures && yarn -s build && cd ../..",
-        "build:shared": "echo 'Building shared dependencies...' && yarn -s build && cd backend/shared/queues && yarn -s build && cd ../i18n && yarn -s build && cd ../email && yarn -s build && cd ../sql && yarn -s build && cd ../models && yarn -s build && cd ../logging && yarn -s build && cd ../middleware && yarn -s build && cd ../env && yarn -s build && cd ../.. && echo 'Done building shared dependencies.'",
-        "build:locales": "cd shared/locales && yarn -s build && cd ../..",
+        "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
+
+        "test": "lerna run test",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue",
+
+        "app:release": "cd devops && yarn -s build-code -s app && cd ../frontend/app/mobile && yarn ios && yarn android",
+                
+        "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
+        "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
+        "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared'",
+
+        "clear:global:shared": "rm -rf shared/*/dist shared/*/esm/dist",
+        "build:global:shared": "echo 'Building globally shared dependencies...' && cd shared/locales && yarn -s build && cd ../utility && yarn -s build && cd ../structures && yarn -s build && cd ../.. && echo 'Done building globally shared dependencies.'",
+        
+        "clear:backend:shared": "rm -rf backend/shared/*/dist",
+        "build:backend:shared": "echo 'Building shared backend dependencies...' && cd backend/shared/queues && yarn -s build && cd ../i18n && yarn -s build && cd ../email && yarn -s build && cd ../sql && yarn -s build && cd ../models && yarn -s build && cd ../logging && yarn -s build && cd ../middleware && yarn -s build && cd ../env && yarn -s build && cd ../.. && echo 'Done building backend shared dependencies.'",
+                
+        "stripe-webhooks": "stripe listen --forward-to http://api.stamhoofd/stripe/webhooks",
         "caddy": "caddy run -w --config .development/caddy.json",
         "dns": "export SERVER_IP=127.0.0.1 && cd .development && source loadenv.sh && coredns",
         "mail": "maildev --ip 0.0.0.0 --incoming-user username --incoming-pass password",
+        
+        "clear": "rm -rf shared/*/dist shared/*/esm/dist frontend/app/*/dist backend/shared/*/dist backend/app/*/dist",
         "clear-dependencies": "rm -rf node_modules */node_modules **/node_modules",
         "clear-vite-cache": "rm -rf frontend/app/*/node_modules/.vite",
+
         "ship": "yarn -s clear:shared && yarn -s build:shared && lerna publish --no-private"
     },
     "dependencies": {
