--- a/backend/app/renderer/.gitignore
+++ b/backend/app/renderer/.gitignore
@@ -1,3 +1,4 @@
+/devops/
 node_modules/
 .node_modules/
 built/*
@@ -209,4 +210,12 @@ dist
 
 .yalc
 yalc.lock
-cache
+
+.yarn
+
+# Yarnrc should be removed from git, because it breaks yarn if the version is not installed yet
+.yarnrc
+
+.env.json
+.env.*.json
+!.env.template.json
