--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -33,6 +33,7 @@
     "dependencies": {
         "@mollie/api-client": "3.7.0",
         "@simonbackx/simple-database": "1.24.0",
+        "@simonbackx/simple-encoding": "2.15.0",
         "@simonbackx/simple-endpoints": "1.13.0",
         "@simonbackx/simple-logging": "^1.0.1",
         "@stamhoofd/backend-i18n": "^2.13.0",
@@ -43,6 +44,7 @@
         "@stamhoofd/sql": "^2.13.0",
         "@stamhoofd/structures": "^2.15.0",
         "@stamhoofd/utility": "^2.13.0",
+        "archiver": "^7.0.1",
         "aws-sdk": "^2.885.0",
         "axios": "1.6.8",
         "cookie": "^0.5.0",
