Updated TypeScript to v5.5.4
- Yay .filter() type narrowing!
- Force VSCode to prompt to use workspace TypeScript version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,5 +90,6 @@
     },
     "search.useIgnoreFiles": false,
     "typescript.preferences.importModuleSpecifier": "project-relative",
-    "typescript.tsdk": "node_modules/typescript/lib"
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "typescript.enablePromptUseWorkspaceTsdk": true
 }
