Fixed publish options

--- a/shared/excel-writer/package.json
+++ b/shared/excel-writer/package.json
@@ -20,5 +20,8 @@
     },
     "peerDependencies": {
         "archiver": "^7.0.1"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
