--- a/backend/shared/models/package.json
+++ b/backend/shared/models/package.json
@@ -25,5 +25,8 @@
     },
     "devDependencies": {
         "@simonbackx/simple-database": "1.25.0"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
