--- a/backend/shared/email/package.json
+++ b/backend/shared/email/package.json
@@ -21,5 +21,8 @@
     "dependencies": {
         "html-to-text": "^8.1.0",
         "nodemailer": "6.9.13"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
