--- a/backend/shared/logging/package.json
+++ b/backend/shared/logging/package.json
@@ -14,5 +14,8 @@
     },
     "dependencies": {
         "@simonbackx/simple-logging": "^1.0.1"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
