--- a/backend/shared/queues/package.json
+++ b/backend/shared/queues/package.json
@@ -12,5 +12,8 @@
     "scripts": {
         "build": "tsc -b",
         "test": "jest --runInBand"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
