--- a/shared/utility/package.json
+++ b/shared/utility/package.json
@@ -14,5 +14,8 @@
         "build": " tsc -b . esm",
         "test": "jest",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
