--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "clear": "rm -rf shared/*/dist shared/*/esm/dist frontend/app/*/dist backend/shared/*/dist backend/app/*/dist",
         "clear-dependencies": "rm -rf node_modules */node_modules **/node_modules",
         "clear-vite-cache": "rm -rf frontend/app/*/node_modules/.vite",
-        "ship": "node ./.development/increase-structures-version.js && yarn -s clear:shared && yarn -s build:shared && lerna publish --yes --no-private"
+        "ship": "node ./.development/increase-structures-version.js && yarn -s clear:shared && yarn -s build:shared && lerna publish --yes --no-private --otp $(op item get NPM --otp || :)"
     },
     "dependencies": {
         "@babel/runtime": "^7.15.4",
