Made Feedback (Nolt) optional via environment variables

--- a/backend/app/api/.env.template.json
+++ b/backend/app/api/.env.template.json
@@ -58,7 +58,7 @@
     "LATEST_IOS_VERSION": 0,
     "LATEST_ANDROID_VERSION": 0,
 
-    "NOLT_SSO_SECRET_KEY": "",
+    "NOLT_SSO_SECRET_KEY": "optional",
     "INTERNAL_SECRET_KEY": "",
     "CRONS_DISABLED": false,
     "WHITELISTED_EMAIL_DESTINATIONS": ["*"],
