--- a/frontend/.env.template.json
+++ b/frontend/.env.template.json
@@ -22,7 +22,7 @@
         "rendererApi": "renderer.stamhoofd"
     },
     "MOLLIE_CLIENT_ID": "",
-    "NOLT_URL": "feedback.stamhoofd.app",
+    "NOLT_URL": "optional",
     "userMode": "organization",
     "translationNamespace": "stamhoofd",
     "platformName": "stamhoofd",
