--- a/frontend/app/mobile/config.yaml
+++ b/frontend/app/mobile/config.yaml
@@ -19,7 +19,7 @@ platforms:
             entitlements:
               replace: true
               entries:
-                - com.apple.developer.associated-domains: ['webcredentials:dashboard.stamhoofd', 'webcredentials:$HOSTNAME', 'applinks:$HOSTNAME']
+                - com.apple.developer.associated-domains: ['webcredentials:dashboard.stamhoofd?mode=developer', 'webcredentials:$HOSTNAME?mode=developer', 'applinks:$HOSTNAME?mode=developer']
           Release:
             entitlements:
               replace: true
