--- a/frontend/app/mobile/android/app/build.gradle
+++ b/frontend/app/mobile/android/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.stamhoofd.stamhoofd"
+    namespace "be.ksa.ravot"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.stamhoofd.stamhoofd"
+        applicationId "be.ksa.ravot"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 34
+        versionCode 40
         versionName "2.21.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
