--- a/frontend/app/mobile/android/app/src/debug/AndroidManifest.xml
+++ b/frontend/app/mobile/android/app/src/debug/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stamhoofd.stamhoofd">
+    package="be.ksa.ravot">
 
     <application>
 
-        <activity android:name="com.stamhoofd.stamhoofd.MainActivity">
+        <activity android:name="be.ksa.ravot.MainActivity">
 
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
