--- a/frontend/app/mobile/config.yaml
+++ b/frontend/app/mobile/config.yaml
@@ -7,6 +7,9 @@ vars:
 platforms:
   android:
     versionName: $VERSION
+    appName: $APP_NAME
+    incrementVersionCode: true
+    packageName: $APP_ID
 
   ios:
     targets:
@@ -14,12 +17,15 @@ platforms:
         version: $VERSION
         displayName: $APP_NAME
         bundleId: $APP_ID
+        incrementBuild: true
+
         builds:
           Debug:
             entitlements:
               replace: true
               entries:
                 - com.apple.developer.associated-domains: ['webcredentials:dashboard.stamhoofd?mode=developer', 'webcredentials:$HOSTNAME?mode=developer', 'applinks:$HOSTNAME?mode=developer']
+
           Release:
             entitlements:
               replace: true
