Added documentation domain in env
fixes STA-94

--- a/backend/app/api/.env.template.json
+++ b/backend/app/api/.env.template.json
@@ -12,6 +12,11 @@
             "BE": "www.be.stamhoofd",
             "NL": "www.nl.stamhoofd"
         },
+        "documentation": {
+            "": "www.be.stamhoofd/docs",
+            "BE": "www.be.stamhoofd/docs",
+            "NL": "www.nl.stamhoofd/docs"
+        },
         "webshop": {
             "": "shop.be.stamhoofd",
             "BE": "shop.be.stamhoofd",
