--- a/frontend/.env.template.json
+++ b/frontend/.env.template.json
@@ -31,4 +31,5 @@
     "userMode": "organization",
     "translationNamespace": "stamhoofd",
     "platformName": "stamhoofd",
+    "ILLUSTRATIONS_NAMESPACE": ""
 }
