--- a/.development/i18n-uuid/package.json
+++ b/.development/i18n-uuid/package.json
@@ -9,7 +9,8 @@
         "start": "yarn build && node ./dist/index.js"
     },
     "dependencies": {
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "dotenv": "^16.4.5"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^7.7.1",
