--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -57,7 +57,7 @@
         "mysql": "^2.18.1",
         "node-rsa": "1.1.1",
         "openid-client": "^5.4.0",
-        "postmark": "4.0.2",
+        "postmark": "^4.0.5",
         "stripe": "^16.6.0"
     }
 }
