Added ship:fix cmd

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "clear-dependencies": "rm -rf node_modules */node_modules **/node_modules",
         "clear-vite-cache": "rm -rf frontend/app/*/node_modules/.vite",
         "ship": "node ./.development/increase-structures-version.js && yarn -s clear:shared && yarn -s build:shared && lerna version --exact --force-publish --yes --no-private && lerna publish from-git --yes --no-private --otp $(op item get NPM --otp || :)",
+        "ship:fix": "lerna publish from-git --yes --no-private --otp $(op item get NPM --otp || :)",
         "translate": "cd .development/i18n-uuid && yarn start"
     },
     "dependencies": {
