--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
         "@babel/cli": "^7.16.0",
         "@babel/core": "^7.16.5",
         "@babel/preset-env": "^7.16.5",
+        "@eslint/js": "^9.11.1",
+        "@types/eslint__js": "^8.42.3",
         "@types/jest": "^27.0.3",
         "@types/pdfkit": "0.13.4",
         "@typescript-eslint/eslint-plugin": "^7.7.1",
@@ -81,10 +83,10 @@
         "@vue/eslint-config-typescript": "^13.0.0",
         "autoprefixer": "^10.4.0",
         "concurrently": "8.2.2",
-        "eslint": "^8.56.0",
-        "eslint-plugin-jest": "28.2.0",
-        "eslint-plugin-simple-import-sort": "12.1.0",
-        "eslint-plugin-vue": "^9.25.0",
+        "eslint": "^9.11.1",
+        "eslint-plugin-jest": "^28.8.3",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-vue": "^9.28.0",
         "favicons": "^7.2.0",
         "jest": "29.7.0",
         "jest-cli": "^29.7.0",
@@ -96,8 +98,8 @@
         "sass": "^1.45.1",
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.1",
-        "typescript": "5.5.4",
-        "typescript-eslint": "^7.7.1",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.7.0",
         "vite": "5.3.5",
         "vite-svg-2-webfont": "3.4.0",
         "vue-tsc": "^2.0.14",
