--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "dev:server": "concurrently -r 'yarn -s dev' 'yarn -s caddy' 'yarn -s dns' 'yarn -s mail' 'yarn -s stripe-webhooks'",
         "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
         "test": "lerna run test",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue",
+        "lint": "lerna run lint",
         "app:release": "cd devops && yarn -s build-code -s app && cd ../frontend/app/mobile && yarn ios && yarn android",
         "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
         "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
