--- a/shared/utility/package.json
+++ b/shared/utility/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "build": " tsc -b . esm",
         "test": "jest",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+        "lint": "eslint ."
     },
     "publishConfig": {
         "access": "public"
