--- a/shared/structures/package.json
+++ b/shared/structures/package.json
@@ -19,7 +19,7 @@
     "scripts": {
         "build": "tsc -b . esm",
         "test": "jest",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+        "lint": "eslint"
     },
     "devDependencies": {
         "@simonbackx/simple-errors": "^1.4",
