--- a/backend/shared/models/package.json
+++ b/backend/shared/models/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "build": "tsc -b && mkdir -p ./dist/src/migrations && rsync --delete --exclude='*.ts' --exclude='*.js' -r --checksum ./src/migrations/ ./dist/src/migrations/ && rsync -r --checksum ./src/assets/ ./dist/src/assets/",
         "test": "jest",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+        "lint": "eslint"
     },
     "peerDependencies": {
         "@simonbackx/simple-database": "*",
