--- a/frontend/app/admin/package.json
+++ b/frontend/app/admin/package.json
@@ -8,7 +8,7 @@
         "dev": "NODE_ENV=development ENV_FILE=../../.env.json vite",
         "build": "NODE_ENV=development ENV_FILE=../../.env.json vite build",
         "build:production": "NODE_OPTIONS=\"--max-old-space-size=8192\" NODE_ENV=production vite build",
-        "lint": "eslint --ext .js,.jsx,.ts,.tsx,.vue"
+        "lint": "eslint"
     },
     "files": [
         "dist"
