--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "@babel/core": "^7.16.5",
         "@babel/preset-env": "^7.16.5",
         "@eslint/js": "^9.11.1",
+        "@stylistic/eslint-plugin": "^2.8.0",
         "@types/eslint__js": "^8.42.3",
         "@types/jest": "^27.0.3",
         "@types/pdfkit": "0.13.4",
