--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "@types/eslint__js": "^8.42.3",
         "@types/jest": "^27.0.3",
         "@types/pdfkit": "0.13.4",
+        "@types/file-saver": "^2.0.5",
         "@typescript-eslint/eslint-plugin": "^7.7.1",
         "@typescript-eslint/parser": "^7.7.1",
         "@vitejs/plugin-vue": "5.1.0",
