--- a/backend/app/renderer/.env.template.json
+++ b/backend/app/renderer/.env.template.json
@@ -2,5 +2,6 @@
     "environment": "development",
     "PORT": 9093,
     "CACHE_PATH": "/etc/stamhoofd/renderer/cache",
-    "INTERNAL_SECRET_KEY": ""
+    "INTERNAL_SECRET_KEY": "",
+    "translationNamespace": "stamhoofd"
 }
