--- a/backend/app/backup/package.json
+++ b/backend/app/backup/package.json
@@ -23,6 +23,7 @@
         "@types/node": "^20.12"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.678.0",
         "@simonbackx/simple-endpoints": "1.14.0",
         "@simonbackx/simple-logging": "^1.0.1",
         "formidable": "3.5.1",
