--- a/backend/app/redirecter/package.json
+++ b/backend/app/redirecter/package.json
@@ -15,5 +15,8 @@
     "dependencies": {
         "@simonbackx/simple-endpoints": "1.14.0",
         "@simonbackx/simple-logging": "^1.0.1"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
