--- a/shared/structures/package.json
+++ b/shared/structures/package.json
@@ -3,11 +3,12 @@
     "version": "2.50.2",
     "main": "./dist/index.js",
     "module": "./esm/dist/index.js",
-    "types": "./esm/dist/index.d.ts",
+    "types": "./dist/index.d.ts",
     "exports": {
         ".": {
             "import": "./esm/dist/index.js",
-            "require": "./dist/index.js"
+            "require": "./dist/index.js",
+            "types": "./dist/index.d.ts"
         }
     },
     "license": "UNLICENCED",
