Force excluded dist folders

--- a/backend/shared/env/tsconfig.json
+++ b/backend/shared/env/tsconfig.json
@@ -29,6 +29,8 @@
         "../../*.d.ts"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "dist",
+        "dist/**/*"
     ]
 }
