--- a/backend/app/api/tsconfig.json
+++ b/backend/app/api/tsconfig.json
@@ -33,7 +33,8 @@
     ],
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "dist/**/*"
     ],
     "ts-node": {
         "files": true
