--- a/backend/shared/email/tsconfig.json
+++ b/backend/shared/email/tsconfig.json
@@ -31,6 +31,8 @@
         "../../*.d.ts"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "dist",
+        "dist/**/*"
     ]
 }
