--- a/backend/shared/middleware/tsconfig.json
+++ b/backend/shared/middleware/tsconfig.json
@@ -30,6 +30,8 @@
         "../../*.d.ts"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "dist",
+        "dist/**/*"
     ]
 }
