--- a/shared/structures/tsconfig.json
+++ b/shared/structures/tsconfig.json
@@ -34,6 +34,7 @@
     "exclude": [
         "node_modules",
         "dist",
-        "esm/dist"
+        "esm/dist",
+        "dist/**/*"
     ]
 }
