Improved SGV reports

--- a/shared/structures/tsconfig.json
+++ b/shared/structures/tsconfig.json
@@ -20,7 +20,8 @@
         "types": [
             "node",
             "jest"
-        ]
+        ],
+        "resolveJsonModule": true
     },
     "include": [
         "index.ts",
