Fixed support for missing cname

--- a/backend/app/api/.env.template.json
+++ b/backend/app/api/.env.template.json
@@ -24,7 +24,8 @@
         },
         "legacyWebshop": "shop.stamhoofd",
         "api": "api.stamhoofd",
-        "rendererApi": "renderer.stamhoofd"
+        "rendererApi": "renderer.stamhoofd",
+        "webshopCname": "shop.stamhoofd"
     },
     "translationNamespace": "stamhoofd",
     "platformName": "stamhoofd",
