--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "app:release": "cd devops && yarn -s build-code -s app && cd ../frontend/app/mobile && yarn ios && yarn android",
         "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
         "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
-        "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared'",
+        "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared || exit 0'",
         "clear:global:shared": "rm -rf shared/*/dist shared/*/esm/dist",
         "build:global:shared": "echo 'Building globally shared dependencies...' && cd shared/locales && yarn -s build && cd ../utility && yarn -s build && cd ../excel-writer && yarn -s build && cd ../structures && yarn -s build && cd ../.. && echo 'Done building globally shared dependencies.'",
         "clear:backend:shared": "rm -rf backend/shared/*/dist",
