--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -31,6 +31,7 @@
         "sinon": "^18.0.0"
     },
     "dependencies": {
+        "@bwip-js/node": "^4.5.1",
         "@mollie/api-client": "3.7.0",
         "@simonbackx/simple-database": "1.25.0",
         "@simonbackx/simple-encoding": "2.16.6",
