--- a/backend/app/backup/package.json
+++ b/backend/app/backup/package.json
@@ -24,13 +24,12 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.678.0",
-        "@simonbackx/simple-endpoints": "1.14.0",
+        "@simonbackx/simple-endpoints": "1.15.0",
         "@simonbackx/simple-logging": "^1.0.1",
         "formidable": "3.5.1",
         "luxon": "3.4.4",
         "mockdate": "^3.0.2",
-        "mysql": "^2.18.1",
-        "puppeteer": "22.12.0"
+        "mysql": "^2.18.1"
     },
     "publishConfig": {
         "access": "public"
