--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
         "qrcode": "1.5.3",
         "sharp": "^0.32",
         "sortablejs-vue3": "^1.2.11",
-        "tslib": "^2.3.1",
-        "uuid": "^9.0.0",
+        "tslib": "^2.8.1",
+        "uuid": "11.0.3",
         "vue": "3.5.12",
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
     },
@@ -76,9 +76,9 @@
         "@eslint/js": "^9.11.1",
         "@stylistic/eslint-plugin": "^2.8.0",
         "@types/eslint__js": "^8.42.3",
+        "@types/file-saver": "^2.0.5",
         "@types/jest": "^27.0.3",
         "@types/pdfkit": "0.13.4",
-        "@types/file-saver": "^2.0.5",
         "@types/qrcode": "1.5.3",
         "@vitejs/plugin-vue": "5.1.0",
         "autoprefixer": "^10.4.0",
