--- a/shared/structures/package.json
+++ b/shared/structures/package.json
@@ -28,11 +28,11 @@
     "devDependencies": {
         "@simonbackx/simple-errors": "^1.4",
         "@types/uuid": "^8.3.0",
-        "uuid": "^8.3.2"
+        "uuid": "11.0.3"
     },
     "peerDependencies": {
         "@simonbackx/simple-errors": "^1.4",
-        "uuid": "^8.3.2"
+        "uuid": "11.0.3"
     },
     "publishConfig": {
         "access": "public"
