--- a/backend/shared/models/package.json
+++ b/backend/shared/models/package.json
@@ -15,7 +15,7 @@
         "lint": "eslint"
     },
     "peerDependencies": {
-        "@simonbackx/simple-database": "*",
+        "@simonbackx/simple-database": "1.27.0",
         "@stamhoofd/email": "*",
         "@stamhoofd/queues": "*"
     },
@@ -24,7 +24,7 @@
         "base-x": "^3.0.9"
     },
     "devDependencies": {
-        "@simonbackx/simple-database": "1.25.0"
+        "@simonbackx/simple-database": "1.27.0"
     },
     "publishConfig": {
         "access": "public"
