Fixed tree shaking injected dependencies

--- a/shared/structures/package.json
+++ b/shared/structures/package.json
@@ -12,7 +12,9 @@
         }
     },
     "license": "UNLICENCED",
-    "sideEffects": false,
+    "sideEffects": [
+        "./src/circular-dependencies/*.ts"
+    ],
     "files": [
         "dist",
         "esm/dist",
