Added private file signing

--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.15.4",
-        "@simonbackx/simple-encoding": "2.19.0",
+        "@simonbackx/simple-encoding": "2.20.0",
         "@simonbackx/simple-errors": "^1.4.0",
-        "@simonbackx/simple-networking": "1.16.0",
+        "@simonbackx/simple-networking": "1.17.0",
         "@simonbackx/vue-app-navigation": "2.8.2",
         "@types/sortablejs": "^1.15.8",
         "@zxcvbn-ts/core": "^0.3.0",
@@ -55,6 +55,7 @@
         "chart.js": "^3.9.1",
         "core-js": "^3.20.1",
         "file-saver": "^2.0.5",
+        "jose": "^5.9.6",
         "jsvat-next": "3.0.2",
         "jszip": "^3.7.1",
         "libphonenumber-js": "^1.9.39",
