--- a/frontend/app/mobile/ios/App/App/AppRelease.entitlements
+++ b/frontend/app/mobile/ios/App/App/AppRelease.entitlements
@@ -4,8 +4,8 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>webcredentials:ravot.ksa.be</string>
-		<string>applinks:ravot.ksa.be</string>
+		<string>webcredentials:keeo.fos.be</string>
+		<string>applinks:keeo.fos.be</string>
 	</array>
 </dict>
 </plist>
