--- a/.development/i18n-replace-text/package.json
+++ b/.development/i18n-replace-text/package.json
@@ -10,7 +10,8 @@
     },
     "dependencies": {
         "uuid": "11.0.3",
-        "dotenv": "^16.4.5"
+        "dotenv": "^16.4.5",
+        "chalk": "4"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^7.7.1",
