--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,25 @@ jobs:
         run: yarn install --prefer-offline --frozen-lockfile
       - name: Build shared packages
         run: yarn build:shared
+      - name: Notify Slack of failure
+        uses: slackapi/slack-github-action@v2.0.0
+        if: ${{ failure() }}
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
+          payload: |
+            text: "*Backend tests failed*"
+            blocks:
+              - type: "section"
+                text:
+                  type: "mrkdwn"
+                  text: "*Backend tests failed* for ${{ github.event.head_commit.message }} (${{ github.event.head_commit.id }}) by @${{ github.event.pull_request.user.name || github.event.head_commit.author.name }}"
+                accessory:
+                  type: "button"
+                  text:
+                    type: "plain_text"
+                    text: "Open commit"
+                    emoji: false
+                  value: "click_me"
+                  url: "${{ github.event.pull_request.url || github.event.head_commit.url }}"
+                  action_id: "button-action"
