--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
               - type: "section"
                 text:
                   type: "mrkdwn"
-                  text: "*Backend tests failed* for ${{ github.event.head_commit.message }} (${{ github.event.head_commit.id }}) by @${{ github.event.pull_request.user.name || github.event.head_commit.author.name }}"
+                  text: "@channel *Backend tests failed* for `${{ github.event.head_commit.message }}` by ${{ github.event.pull_request.user.name || github.event.head_commit.author.name }}"
                 accessory:
                   type: "button"
                   text:
