--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           authentication plugin: 'mysql_native_password'
           mysql version: '8.0'
-          mysql database: 'root'
+          mysql database: 'stamhoofd'
           mysql root password: 'root'
 
       - name: Install dependencies
