--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "favicons": "^7.2.0",
         "jest": "29.7.0",
         "jest-cli": "^29.7.0",
+        "jest-console-group-reporter": "^1.1.1",
         "jest-extended": "^1.2.0",
         "lerna": "^8.1.2",
         "maildev": "^2.1.0",
