--- a/backend/app/api/.env.ci.json
+++ b/backend/app/api/.env.ci.json
@@ -8,7 +8,10 @@
             "NL": "dev.stamhoofd.nl"
         },
         "webshop": "shop.stamhoofd.dev",
-        "api": "api.stamhoofd.dev"
+        "api": "api.stamhoofd.dev",
+        "defaultBroadcastEmail": {
+            "": "stamhoofd.email"
+        }
     },
     
     "PORT": 9091,
@@ -38,5 +41,7 @@
     "translationNamespace": "digit",
     "platformName": "ravot",
     "userMode": "organization",
-    "WHITELISTED_EMAIL_DESTINATIONS": []
+    "WHITELISTED_EMAIL_DESTINATIONS": [],
+    "MEMBER_NUMBER_ALGORITHM": "Incremental",
+    "MEMBER_NUMBER_ALGORITHM_LENGTH": 10
 }
