Corrected CI env

--- a/backend/app/api/.env.ci.json
+++ b/backend/app/api/.env.ci.json
@@ -36,8 +36,8 @@
 
     "INTERNAL_SECRET_KEY": "test",
 
-    "STRIPE_SECRET_KEY": "test",
-    "STRIPE_ENDPOINT_SECRET": "test",
+    "STRIPE_SECRET_KEY": "sk_test_test",
+    "STRIPE_ENDPOINT_SECRET": "sk_test",
     "translationNamespace": "digit",
     "platformName": "ravot",
     "userMode": "organization",
