Updated CI config

--- a/backend/app/api/.env.ci.json
+++ b/backend/app/api/.env.ci.json
@@ -29,10 +29,10 @@
     "AWS_SECRET_ACCESS_KEY": "",
     "AWS_REGION": "",
 
-    "SPACES_ENDPOINT": "ams3.digitaloceanspaces.com",
-    "SPACES_BUCKET": "stamhoofd",
-    "SPACES_KEY": "",
-    "SPACES_SECRET": "",
+    "SPACES_ENDPOINT": "anydomain.example",
+    "SPACES_BUCKET": "example",
+    "SPACES_KEY": "test",
+    "SPACES_SECRET": "test",
 
     "INTERNAL_SECRET_KEY": "test",
 
