--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,15 @@ jobs:
             backend:
               - 'shared/**'
               - 'backend/**'
+            structures:
+              - 'shared/**'
+
     outputs:
       changed_backend: ${{ steps.changed.outputs.backend }}
+      changed_structures: ${{ steps.changed.outputs.structures }}
 
   job_test_backend:
+    name: 'Backend API Tests'
     runs-on: ubuntu-latest
     needs: [job_setup]
     if: needs.job_setup.outputs.changed_backend == 'true'
@@ -65,12 +70,54 @@ jobs:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
           payload: |
-            text: "*Backend tests failed*"
+            text: "Backend tests failed"
             blocks:
               - type: "section"
                 text:
                   type: "mrkdwn"
                   text: "@channel *Backend tests failed* for `${{ github.event.head_commit.message }}` by ${{ github.event.pull_request.user.name || github.event.head_commit.author.name }}"
+                accessory:
+                  type: "button"
+                  text:
+                    type: "plain_text"
+                    text: "Open commit"
+                    emoji: false
+                  value: "click_me"
+                  url: "${{ github.event.pull_request.url || github.event.head_commit.url }}"
+                  action_id: "button-action"
+
+  job_test_structures:
+    name: 'Structures Tests'
+    runs-on: ubuntu-latest
+    needs: [job_setup]
+    if: needs.job_setup.outputs.changed_structures == 'true'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install --prefer-offline --frozen-lockfile
+      - name: Build shared packages
+        run: yarn build:shared
+      - name: Run tests
+        run: cd shared/structures && yarn test --bail
+      - name: Notify Slack of failure
+        uses: slackapi/slack-github-action@v2.0.0
+        if: ${{ failure() }}
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
+          payload: |
+            text: "Structures tests failed"
+            blocks:
+              - type: "section"
+                text:
+                  type: "mrkdwn"
+                  text: "@channel *Structures tests failed* for `${{ github.event.head_commit.message }}` by ${{ github.event.pull_request.user.name || github.event.head_commit.author.name }}"
                 accessory:
                   type: "button"
                   text:
