--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --prefer-offline --frozen-lockfile
       - name: Build shared packages
-        run: yarn build:shared
+        run: yarn build:global:shared
       - name: Run tests
         run: cd shared/structures && yarn test --bail
       - name: Notify Slack of failure
