--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,3 +184,56 @@ jobs:
                   value: "click_me"
                   url: "${{ github.event.pull_request.url || github.event.head_commit.url }}"
                   action_id: "button-action"
+  
+  job_boot:
+    name: 'API boot and shutdown'
+    runs-on: ubuntu-latest
+    needs: [job_setup]
+    if: needs.job_setup.outputs.changed_backend == 'true'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
+      - name: Shutdown MySQL
+        run: sudo service mysql stop
+
+      - uses: daniellockyer/mysql-action@main
+        with:
+          authentication plugin: 'mysql_native_password'
+          mysql version: '8.0'
+          mysql database: 'stamhoofd-tests'
+          mysql root password: 'root'
+
+      - name: Install production dependencies only
+        run: yarn install --prefer-offline --frozen-lockfile --production
+      - name: Build shared packages
+        run: yarn build:shared
+      - name: Set test env
+        run: cp backend/app/api/.env.ci.json backend/app/api/.env.test.json
+      - name: Run boot test
+        run: test/boot/boot-test.sh
+      - name: Notify Slack of failure
+        uses: slackapi/slack-github-action@v2.0.0
+        if: ${{ failure() }}
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
+          payload: |
+            text: "Boot test failed"
+            blocks:
+              - type: "section"
+                text:
+                  type: "mrkdwn"
+                  text: "@channel *Boot test failed* for `${{ github.event.head_commit.message }}` by ${{ github.event.pull_request.user.name || github.event.head_commit.author.name }}"
+                accessory:
+                  type: "button"
+                  text:
+                    type: "plain_text"
+                    text: "Open commit"
+                    emoji: false
+                  value: "click_me"
+                  url: "${{ github.event.pull_request.url || github.event.head_commit.url }}"
+                  action_id: "button-action"
